<resources>

    <string name="app_name">危险品信息管理系统</string>
	<string name="title">危险品信息管理系统</string>
	<string name="unit_department">中国人民武装警察部队学院   工程六队</string>
	<string name="start_rfid">开始RFID搜索</string>
	<string name="sys_settings">系统设置</string>
	<string name="exit">退出</string>
	<string name="card_info">附近电子标签信息显示</string>
	
	<string name="tag_id">标签ID</string>
	<string name="car_id">车牌号码</string>
	<string name="with_dengoures">携带危险物品</string>
	<string name="stop_read">暂停读取标签</string>
	
    
</resources>
