<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/red_main_bg"
    android:orientation="vertical" >
    <include layout="@layout/title"/>

    <LinearLayout
        android:id="@+id/layout_listview_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:layout_marginTop="5dp" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/btn_listview_title"
            android:layout_marginTop="1dp"
            android:layout_marginBottom="3dp"
            android:layout_marginLeft="1dp"
            style="@style/ListViewTitlstyle"
            android:padding="2dp"
            android:layout_weight="4"
            android:text="@string/tag_id" />
        
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/btn_listview_title"
            android:layout_marginTop="1dp"
            android:layout_marginBottom="3dp"
            android:layout_marginLeft="1dp"
            style="@style/ListViewTitlstyle"
            android:padding="2dp"
            android:layout_weight="4"
            android:text="@string/car_id" />
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/btn_listview_title"
            android:layout_marginTop="1dp"
            android:layout_marginBottom="3dp"
            android:layout_marginLeft="1dp"
            android:layout_marginRight="1dp"
            style="@style/ListViewTitlstyle"
            android:padding="2dp"
            android:layout_weight="7"
            android:text="@string/with_dengoures" />
    </LinearLayout>
    <ListView 
        android:id="@+id/listView_tag_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        ></ListView>
	<Button 
	    android:id="@+id/button_stop_read"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:text="@string/stop_read"
	    android:layout_margin="5dp"
	    android:background="@drawable/main_btn_bg"
	    />
</LinearLayout>
